wk_taa_taaqa/src/objects/ATA_AssignmentType_Map_t__mdt.object
<CustomObject>
    <description>Defines a Collection of Field API Name, Field Value Pairs, mapped to a particular Assignment Type Value</description>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <description>The assignment type defines the roles through the TeamAssignment_Rule and Role_Assignment objects</description>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business_Segment_Market_Segment</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Named_National</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Named_Corp_National</fullName>
                </value>
                <value>
                    <fullName>Named_Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>Field API Name e.g. mycustomfield__c, Name, etc</description>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <description>Field Value for the Rule</description>
        <label>Field Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ATA AssignmentType Map</label>
    <pluralLabel>ATA AssignmentType Map</pluralLabel>
</CustomObject>